# rs-player-ffmpeg-sdl

./: .gitignore  Cargo.toml  README.md
docs/: SDL_FFMPEG_YUV.md  recording.md
scripts/: make-test-vid.sh
sdl/: Cargo.toml
sdl/src/: main.rs
src/: analyzer_state.rs  app.rs  decode_thread.rs  filter.rs  lib.rs  main.rs  movie_state.rs  record_state.rs
src/platform/: sdl.rs
